[gd_scene load_steps=10 format=3 uid="uid://cadelnnsu1d6a"]

[ext_resource type="Texture2D" uid="uid://b58vau1im1n4k" path="res://Art/Effect/Tex_circle.png" id="1_3f244"]
[ext_resource type="Script" path="res://Script/PickUp/skill_memo.gd" id="1_n1mx3"]
[ext_resource type="Texture2D" uid="uid://c1qhwi8ewswm4" path="res://Art/Effect/Tex_circle_small.png" id="2_v485v"]
[ext_resource type="Resource" uid="uid://b7gayra12dcja" path="res://ResourceData/Skill/Container/fireball.tres" id="2_y5p0i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hq5mo"]
size = Vector2(128, 128)

[sub_resource type="Curve" id="Curve_hppm2"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_jvgmw"]
_data = [Vector2(0.00701755, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.295292), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_0ubmr"]
max_value = 100.0
_data = [Vector2(0, 100), 0.0, 0.0, 0, 0, Vector2(1, 64.7646), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_y4b8r"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[node name="SkillMemo" type="Area2D"]
collision_layer = 256
collision_mask = 256
script = ExtResource("1_n1mx3")
skill = ExtResource("2_y5p0i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_hq5mo")

[node name="IdleParticles" type="CPUParticles2D" parent="."]
amount = 10
lifetime = 1.5
explosiveness = 0.12
randomness = 0.28
texture = ExtResource("2_v485v")
emission_shape = 1
emission_sphere_radius = 42.84
direction = Vector2(0, -1)
spread = 18.95
gravity = Vector2(0, 0)
initial_velocity_min = 32.21
initial_velocity_max = 32.21
linear_accel_min = -32.9
linear_accel_curve = SubResource("Curve_hppm2")
scale_amount_curve = SubResource("Curve_jvgmw")
color = Color(0.192157, 1, 0.92549, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0, 0.92549, 0.988235, 1)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_3f244")

[node name="PickupParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 30
lifetime = 2.0
one_shot = true
explosiveness = 1.0
texture = ExtResource("2_v485v")
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 203.95
initial_velocity_max = 296.06
damping_min = 1.316
damping_max = 3.289
damping_curve = SubResource("Curve_0ubmr")
scale_amount_min = 0.1
scale_amount_curve = SubResource("Curve_y4b8r")
color = Color(0.576471, 1, 1, 1)
